--- a/style.css
+++ b/style.css
@@ -229,13 +229,11 @@ body {
 	bottom: 120px;
 }
 
-@media screen and (max-width: 1635px) and (min-width: 1360px) {
+@media screen and (max-width: 1635px) and (min-width: 1185px) {
 	.walkthrough__image {
-		left: 70px;
-		bottom: 60px;
-		width: 80%;
-		max-width: 750px;
-		min-height: 690px;
+		left: 10%;
+		bottom: 90px;
+		height: 660px;
 	}
 }
 
@@ -293,6 +291,41 @@ body {
 	.walkthrough__right {
 		flex: 1.3;
 	}
+}
+
+@media screen and (max-width: 1185px) {
+	.walkthrough__image {
+		display: none;
+	}
+	.walkthrough__box {
+		display: none;
+	}
+	.walkthrough__left {
+		display: none;
+	}
+	.walkthrough__right {
+		padding-left: 100px;
+		background-color: var(--primary-color);
+		padding-top: 140px;
+	}
+}
+
+/* Break Images */
+
+#break-images {
+	margin-top: 200px;
+	width: 100%;
+	overflow-x: hidden; /* Ensures images do not overflow horizontally */
+	display: none;
+}
+.break-images__container {
+	display: flex;
+	justify-content: space-between; /* Distribute images evenly along the line */
+	width: 100%; /* Take full width of the parent container */
+}
+.break-image {
+	width: calc(33.33% - 10px); /* Equal width for each image with some margin */
+	max-width: 100%; /* Ensure images don't exceed their container */
 }
 
 /* Work Flow */
@@ -408,6 +441,30 @@ body {
 	}
 }
 
+@media screen and (max-width: 1337px) and (min-width: 780px) {
+	.work-flow__image {
+		display: none;
+	}
+
+	#break-images {
+		display: block;
+	}
+
+	.work-flow__box {
+		display: none;
+	}
+
+	.work-flow__right {
+		display: none;
+	}
+
+	.work-flow__left {
+		width: 100%;
+		padding: 0 10%;
+		margin-top: 50px;
+	}
+}
+
 /* Projects */
 
 #projects {
@@ -425,7 +482,6 @@ body {
 	font-size: 3rem;
 	font-weight: 600;
 	margin-bottom: 55px;
-	/* margin-top: 250px; */
 }
 
 .projects__items {
@@ -540,6 +596,30 @@ body {
 	font-weight: 500;
 	line-height: 1.8;
 	text-align: left;
+}
+
+@media screen and (max-width: 1347px) {
+	.testimonials__text__description__additional {
+		display: none;
+	}
+	.testimonials__text__title {
+		display: flex;
+		height: 150px;
+		padding-bottom: 30px;
+	}
+	.testimonials__text__quotes {
+		/* color: var(--secondary-color);
+		position: static;
+		width: fit-content;
+		vertical-align: top; */
+		display: none;
+	}
+	.testimonials__text__description {
+		padding: 30px 15%;
+	}
+	.testimonials__image {
+		width: 40%;
+	}
 }
 
 /* Footer */
