--- a/style.css
+++ b/style.css
@@ -102,6 +102,10 @@ body {
 	margin: 0 auto;
 }
 
+.landing__header__tablet {
+	display: none;
+}
+
 @media screen and (min-width: 1989px) {
 	.landing__image {
 		width: 1100px;
@@ -109,7 +113,7 @@ body {
 	}
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1360px) {
+@media screen and (max-width: 1360px) {
 	.title {
 		margin-top: 100px;
 		font-size: 3rem;
@@ -128,6 +132,81 @@ body {
 @media screen and (min-width: 1192px) and (max-width: 1360px) {
 	.landing__image {
 		top: 200px;
+	}
+}
+
+@media screen and (max-width: 1027px) {
+	.landing__header {
+		display: none;
+	}
+	.landing__header__tablet {
+		display: flex;
+		flex-direction: column;
+		padding: 0 10%;
+	}
+	.landing__header__tablet__upper {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	.navigation__tablet {
+		margin-top: 20px;
+		width: 100%;
+	}
+	.landing__image {
+		width: 65%;
+	}
+}
+
+@media screen and (max-width: 740px) {
+	.description {
+		padding-bottom: 200px;
+	}
+}
+
+@media screen and (max-width: 642px) {
+	.landing__image {
+		top: 350px;
+	}
+}
+
+@media screen and (max-width: 554px) {
+	.landing__image {
+		top: 400px;
+	}
+}
+@media screen and (max-width: 534px) {
+	.navigation {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 475px) {
+	.description {
+		padding-bottom: 0;
+	}
+	.title {
+		padding-top: 150px;
+		margin: auto;
+		width: 90%;
+	}
+	.description {
+		width: 70%;
+		margin: 20px auto 0;
+	}
+	.landing__image {
+		position: static;
+		width: 100%;
+		margin-top: 150px;
+	}
+}
+
+@media screen and (max-width: 425px) {
+	.title {
+		padding-top: 150px;
+		margin: auto;
+		width: 70%;
+		font-size: 2.5rem;
 	}
 }
 
@@ -182,6 +261,22 @@ body {
 	}
 }
 
+@media screen and (max-width: 950px) {
+	#statistics {
+		padding-top: 220px;
+	}
+
+	.statistics__text h3 {
+		font-size: 2.4rem;
+	}
+
+	.statistics__container {
+		padding: 0;
+		margin-top: 100px;
+		gap: 2%;
+	}
+}
+
 .statistics__data {
 	text-align: left;
 }
@@ -199,6 +294,46 @@ body {
 	font-weight: 600;
 }
 
+@media screen and (max-width: 780px) {
+	.statistics__data__number {
+		font-size: 2rem;
+	}
+}
+
+@media screen and (max-width: 720px) {
+	#statistics {
+		padding-top: 150px;
+	}
+	.statistics__text {
+		gap: 10%;
+	}
+}
+@media screen and (max-width: 533px) {
+	.statistics__text {
+		flex-direction: column;
+		gap: 30px;
+	}
+	.statistics__text h3,
+	.statistics__text h5 {
+		text-align: center;
+	}
+	.statistics__container {
+		flex-direction: column;
+		gap: 30px;
+	}
+	.statistics__data {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 7%;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	#statistics {
+		padding-top: 100px;
+	}
+}
 /* Walkthrough */
 
 #walkthrough {
@@ -229,13 +364,11 @@ body {
 	bottom: 120px;
 }
 
-@media screen and (max-width: 1635px) and (min-width: 1360px) {
+@media screen and (max-width: 1635px) and (min-width: 1185px) {
 	.walkthrough__image {
-		left: 70px;
-		bottom: 60px;
-		width: 80%;
-		max-width: 750px;
-		min-height: 690px;
+		left: 10%;
+		bottom: 90px;
+		height: 660px;
 	}
 }
 
@@ -293,6 +426,86 @@ body {
 	.walkthrough__right {
 		flex: 1.3;
 	}
+}
+
+@media screen and (max-width: 1185px) {
+	.walkthrough__image {
+		display: none;
+	}
+	.walkthrough__box {
+		display: none;
+	}
+	.walkthrough__left {
+		display: none;
+	}
+	.walkthrough__right {
+		padding-left: 100px;
+		background-color: var(--primary-color);
+		padding-top: 140px;
+	}
+	.walkthrough__button {
+		width: 30%;
+		margin-top: 100px;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.walkthrough__button {
+		width: 100%;
+	}
+	.walkthrough__title,
+	.walkthrough__description {
+		text-align: center;
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 457px) {
+	.walkthrough__title {
+		font-size: 2rem;
+	}
+	.walkthrough__description {
+		font-size: 0.9rem;
+	}
+	.walkthrough__button {
+		margin: 50px auto;
+	}
+	.walkthrough__right {
+		margin-top: 80px;
+	}
+}
+
+@media screen and (max-width: 440px) {
+	.walkthrough__right {
+		padding: 100px 10% 60px;
+	}
+}
+
+@media screen and (max-width: 355px) {
+	.statistics__data__number {
+		font-size: 1.4rem;
+	}
+}
+
+/* Break Images */
+
+#break-images {
+	margin-top: 200px;
+	width: 100%;
+	overflow-x: hidden; /* Ensures images do not overflow horizontally */
+	display: none;
+}
+.break-images__container__small {
+	display: none;
+}
+.break-images__container {
+	display: flex;
+	justify-content: space-between; /* Distribute images evenly along the line */
+	width: 100%; /* Take full width of the parent container */
+}
+.break-image {
+	width: calc(33.33% - 10px); /* Equal width for each image with some margin */
+	max-width: 100%; /* Ensure images don't exceed their container */
 }
 
 /* Work Flow */
@@ -408,11 +621,73 @@ body {
 	}
 }
 
+@media screen and (max-width: 1337px) {
+	.work-flow__image {
+		display: none;
+	}
+
+	#break-images {
+		display: block;
+	}
+
+	.work-flow__box {
+		display: none;
+	}
+
+	.work-flow__right {
+		display: none;
+	}
+
+	.work-flow__left {
+		width: 100%;
+		padding: 0 10%;
+		margin-top: 50px;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	#break-images {
+		display: none;
+	}
+	.break-images__container__small {
+		display: block;
+		width: 100%;
+	}
+	.break-image__mobile {
+		width: 100%;
+		overflow: hidden;
+		margin-top: 100px;
+	}
+	#work-flow {
+		margin-top: 50px;
+	}
+	.work-flow__title {
+		text-align: center;
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 482px) {
+	.work-flow__title {
+		font-size: 2rem;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	.work-flow__item__number {
+		display: none;
+	}
+}
+
 /* Projects */
 
 #projects {
 	width: 70%;
 	margin: 200px auto 0;
+}
+
+.projects__items__mobile {
+	display: none;
 }
 
 @media screen and (min-width: 1635px) {
@@ -425,7 +700,6 @@ body {
 	font-size: 3rem;
 	font-weight: 600;
 	margin-bottom: 55px;
-	/* margin-top: 250px; */
 }
 
 .projects__items {
@@ -464,6 +738,16 @@ body {
 	flex-direction: column;
 }
 
+.projects__items__item__mobile {
+	height: 300px;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
 .living-room {
 	background-image: url("images/project1.jpg");
 }
@@ -494,6 +778,32 @@ body {
 
 .projects__items__item__subtitle {
 	font-weight: 300;
+}
+
+@media screen and (max-width: 768px) {
+	#projects {
+		margin-top: 100px;
+	}
+	.projects__items {
+		display: none;
+	}
+	.projects__items__mobile {
+		display: flex;
+		flex-direction: column;
+		gap: 30px;
+	}
+	.projects__items__left {
+		height: 300px;
+	}
+}
+
+@media screen and (max-width: 342px) {
+	.projects__title {
+		font-size: 2rem;
+	}
+	.projects__items__item__title {
+		font-size: 1rem;
+	}
 }
 
 /* Testimonials */
@@ -542,6 +852,67 @@ body {
 	text-align: left;
 }
 
+@media screen and (max-width: 1347px) {
+	.testimonials__text__description__additional {
+		display: none;
+	}
+	.testimonials__text__title {
+		display: flex;
+		height: 150px;
+		padding-bottom: 30px;
+	}
+	.testimonials__text__quotes {
+		display: none;
+	}
+	.testimonials__text__description {
+		padding: 30px 15%;
+	}
+	.testimonials__image {
+		width: 40%;
+	}
+}
+
+@media screen and (max-width: 960px) {
+	.testimonials__image {
+		display: none;
+	}
+	#testimonials {
+		margin-top: 100px;
+	}
+}
+
+@media screen and (max-width: 567px) {
+	.testimonials__text__title h1 {
+		font-size: 2.5rem;
+		text-align: center;
+	}
+	.testimonials__text__description {
+		text-align: center;
+	}
+}
+
+@media screen and (max-width: 474px) {
+	.testimonials__text__title h1 {
+		font-size: 2rem;
+	}
+}
+
+@media screen and (max-width: 446px) {
+	.testimonials__text__title {
+		padding: 0;
+	}
+	.testimonials__text__title h1 {
+		font-size: 2rem;
+		margin-bottom: 30px;
+	}
+}
+
+@media screen and (max-width: 373px) {
+	.testimonials__text__description {
+		font-size: 1rem;
+	}
+}
+
 /* Footer */
 
 footer {
@@ -572,4 +943,36 @@ footer h3 {
 
 .footer__links a:hover {
 	color: var(--hover);
+}
+
+@media screen and (max-width: 1027px) {
+	.footer__links {
+		font-size: 0.75rem;
+		margin-left: 10%;
+	}
+}
+
+@media screen and (max-width: 650px) {
+	.footer__links {
+		font-size: 0.5rem;
+	}
+	footer h3 {
+		font-size: 1rem;
+		font-weight: 600;
+	}
+}
+
+@media screen and (max-width: 385px) {
+	footer h3 {
+		display: none;
+	}
+	.footer__links {
+		margin: 0;
+		padding: 0;
+	}
+}
+@media screen and (max-width: 742px) {
+	footer {
+		margin-top: 100px;
+	}
 }
