--- a/style.css
+++ b/style.css
@@ -976,3 +976,35 @@ footer h3 {
 		margin-top: 100px;
 	}
 }
+
+/* Mascot */
+
+.mascot-container {
+	position: fixed;
+	bottom: 0;
+	right: -300px;
+	height: 150px;
+	transition: right 1s ease;
+	z-index: 1000;
+}
+
+#mascot {
+	width: 100%;
+	height: 100%;
+}
+
+.mascot-container.active {
+	right: 20px;
+}
+
+@media screen and (max-width: 500px) {
+	.mascot-container {
+		height: 100px;
+	}
+}
+
+@media screen and (max-width: 321px) {
+	.mascot-container {
+		height: 80px;
+	}
+}
