--- a/style.css
+++ b/style.css
@@ -983,28 +983,64 @@ footer h3 {
 	position: fixed;
 	bottom: 0;
 	right: -300px;
-	height: 150px;
+	height: 300px;
 	transition: right 1s ease;
 	z-index: 1000;
+	display: flex;
+}
+
+#mascot-message {
+	background-image: url("/images/message-bubble.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	height: 50%;
+	margin-right: -150px;
+	opacity: 0;
+	transition: opacity 0.3s ease;
+	color: white;
+	display: flex;
+	width: 100%;
+	align-items: left;
+}
+
+#mascot-message h6 {
+	margin: auto;
+	margin-left: 45px;
+	margin-top: 45px;
+	width: 40%;
+}
+
+.mascot-container:hover {
+	cursor: pointer;
+}
+.mascot-container:hover #mascot-message {
+	opacity: 1;
 }
 
 #mascot {
 	width: 100%;
-	height: 100%;
+	height: 55%;
+	align-self: flex-end;
+	max-width: fit-content;
+}
+
+.hidden {
+	display: none;
 }
 
 .mascot-container.active {
-	right: 20px;
+	right: 0px;
 }
 
 @media screen and (max-width: 500px) {
 	.mascot-container {
-		height: 100px;
+		height: 200px;
 	}
-}
-
-@media screen and (max-width: 321px) {
-	.mascot-container {
-		height: 80px;
+	#mascot-message h6 {
+		font-size: 0.7rem;
+		margin: 27px 0 0 30px;
+	}
+	#mascot-message {
+		margin-right: -100px;
 	}
 }
