--- a/style.css
+++ b/style.css
@@ -10,6 +10,24 @@
 	--hover: #e7e3e2;
 }
 
+@keyframes tilt-shaking {
+	0% {
+		transform: rotate(0deg);
+	}
+	25% {
+		transform: rotate(10deg);
+	}
+	50% {
+		transform: rotate(0deg);
+	}
+	75% {
+		transform: rotate(-10deg);
+	}
+	100% {
+		transform: rotate(0deg);
+	}
+}
+
 body {
 	font-family: "Poppins", sans-serif;
 	font-size: var(--font-size);
@@ -1022,6 +1040,11 @@ footer h3 {
 	height: 55%;
 	align-self: flex-end;
 	max-width: fit-content;
+}
+
+.tilt-shake {
+	animation: tilt-shaking 2s infinite;
+	animation-delay: 0s;
 }
 
 .hidden {
